chore: fix syntax

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,13 +39,11 @@ jobs:
         run: xk6 build --with github.com/szkiba/xk6-crypto=.
       - name: Test
         run: ./k6 run --no-usage-report test/crypto.test.js
-        
+
   release:
     needs: [test]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: annaliseai/enterprise-k6-tests/.github/workflows/k6_release_build.yml@optsw-8301
-        with:
-          branch: 'release/v0.43.1'
-          version_tag: ${{ github.ref_name }}
-          k6_version: ${{ env.K6_VERSION }}
+    uses: annaliseai/enterprise-k6-tests/.github/workflows/k6_release_build.yml@optsw-8301
+    with:
+      branch: 'release/v0.43.1'
+      version_tag: ${{ github.ref_name }}
+      k6_version: ${{ env.K6_VERSION }}
