--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,9 +15,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - run: git fetch --force --tags
       - uses: actions/setup-go@v3
         with:
           go-version: 1.19.x
@@ -39,11 +36,27 @@ jobs:
         run: xk6 build --with github.com/szkiba/xk6-crypto=.
       - name: Test
         run: ./k6 run --no-usage-report test/crypto.test.js
-
-  release:
+  
+  publish:
+    runs-on: ubuntu-latest
     needs: [test]
-    uses: annaliseai/enterprise-k6-tests/.github/workflows/k6_release_build.yml@optsw-8301
-    with:
-      branch: 'release/v0.43.1'
-      version_tag: ${{ github.ref_name }}
-      k6_version: ${{ env.K6_VERSION }}
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-go@v3
+        with:
+          go-version: 1.19.x
+          check-latest: true
+          cache: true
+      - uses: aws-actions/configure-aws-credentials@v1-node16
+        with:
+          role-to-assume: ${{ secrets.AWS_ASSUME_ROLE }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Install xk6
+        run: go install go.k6.io/xk6/cmd/xk6@latest
+      - name: Build release
+        run: .github/scripts/build-k6-release.sh ${{ github.ref_name }}
+      - name: Push to s3
+        working-directory: xk6-crypto
+        run: aws s3 cp --recursive dist/ s3://${{ secrets.AWS_S3_ARTIFACTS_BUCKET }}/k6/
