--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,7 +61,10 @@ jobs:
   
   publish:
     runs-on: ubuntu-latest
-    needs: [test]
+    needs: [configure,test]
+    if: |
+      github.ref_name == 'main' ||
+      github.ref_type == 'tag'
     steps:
       - uses: actions/checkout@v3
         with:
